--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header class="fb_container fb_flex fb_header_1 ">
         <div>
-            <img src="asset1/images/logo.svg" alt="Local image" loading="lazy" width="106" height="34">
+            <img src="asset1/images/logo.svg" alt="images" loading="lazy" width="106" height="34">
         </div>
 
 
@@ -32,7 +32,7 @@
                     aria-describedby="inputGroup-sizing-lg" placeholder="Search players, coach, acadmey..." />
 
                 <button type="submit" class="fb_search_btn">
-                    <img src="asset1/images/search.svg" alt="Local image" loading="lazy" width="15" height="15" />
+                    <img src="asset1/images/search.svg" alt="images" loading="lazy" width="15" height="15" />
                 </button>
 
             </div>
@@ -62,7 +62,7 @@
 
                 <div class="fb_club fb_city">
                     <span class="fb_font">Select Your City</span>
-                    <img src="asset1/images/black-arrow.svg" alt="Local image" loading="lazy" width="14" height="14">
+                    <img src="asset1/images/black-arrow.svg" alt="images" loading="lazy" width="14" height="14">
                 </div>
             </div> -->
 
@@ -84,7 +84,7 @@
 
         <div>
             <span class="fb_blue_home">Home</span>
-            <img src="asset1/images/white-arrow.svg" alt="Local image" loading="lazy" width="14" height="8">
+            <img src="asset1/images/white-arrow.svg" alt="images" loading="lazy" width="14" height="8">
             <span class="fb_blue_home">Login To Manager</span>
         </div>
 
@@ -146,7 +146,7 @@
             <div class="city_div fb_font">
                 <div class="fb_city_search_container">
                     <div class="fb_city_search_icon">
-                        <img src="asset1/images/search2.svg" loading="lazy" alt="Local image" width="16" height="16">
+                        <img src="asset1/images/search2.svg" loading="lazy" alt="images" width="16" height="16">
                     </div>
 
                     <input type="text" class="fb_city_search_input"
@@ -155,7 +155,7 @@
                 </div>
 
                 <div class="fb_detect">
-                    <img src="asset1/images/detect.svg" loading="lazy" alt="Local image" width="18" height="18">
+                    <img src="asset1/images/detect.svg" loading="lazy" alt="images" width="18" height="18">
                     <span class="fb_font">Detect my location</span>
                 </div>
 
@@ -166,16 +166,16 @@
 
 
                     <div class="fb_city_img">
-                        <img src="asset1/images/mumbai.png" alt="Local image" loading="lazy" width="86" height="86">
-                        <img src="asset1/images/delhi-ncr.png" alt="Local image" loading="lazy" width="86" height="86">
-                        <img src="asset1/images/begaluru.png" alt="Local image" loading="lazy" width="86" height="86">
-                        <img src="asset1/images/hyderababd.png" alt="Local image" loading="lazy" width="86" height="86">
-                        <img src="asset1/images/ahmedabad.png" alt="Local image" loading="lazy" width="86" height="86">
-                        <img src="asset1/images/chandigarh.png" alt="Local image" loading="lazy" width="86" height="86">
-                        <img src="asset1/images/chennai.png" alt="Local image" loading="lazy" width="86" height="86">
-                        <img src="asset1/images/pune.png" alt="Local image" loading="lazy" width="86" height="86">
-                        <img src="asset1/images/kolkata.png" alt="Local image" loading="lazy" width="86" height="86">
-                        <img src="asset1/images/kochi.png" alt="Local image" loading="lazy" width="86" height="86">
+                        <img src="asset1/images/mumbai.png" alt="images" loading="lazy" width="86" height="86">
+                        <img src="asset1/images/delhi-ncr.png" alt="images" loading="lazy" width="86" height="86">
+                        <img src="asset1/images/begaluru.png" alt="images" loading="lazy" width="86" height="86">
+                        <img src="asset1/images/hyderababd.png" alt="images" loading="lazy" width="86" height="86">
+                        <img src="asset1/images/ahmedabad.png" alt="images" loading="lazy" width="86" height="86">
+                        <img src="asset1/images/chandigarh.png" alt="images" loading="lazy" width="86" height="86">
+                        <img src="asset1/images/chennai.png" alt="images" loading="lazy" width="86" height="86">
+                        <img src="asset1/images/pune.png" alt="images" loading="lazy" width="86" height="86">
+                        <img src="asset1/images/kolkata.png" alt="images" loading="lazy" width="86" height="86">
+                        <img src="asset1/images/kochi.png" alt="images" loading="lazy" width="86" height="86">
                     </div>
 
                     <div>
@@ -284,10 +284,10 @@
     <section class="own_buiseness_2">
         <div class="buiseness_left">
             <div class="academy_pic">
-                <img src="asset1/images/academy_pic.png" alt="loading">
+                <img src="asset1/images/academy_pic.png" alt="">
 
                 <div class="club_logo">
-                    <img src="asset1/images/club_logo.png" alt="loading">
+                    <img src="asset1/images/club_logo.png" alt="">
                 </div>
             </div>
 
@@ -314,7 +314,7 @@
 
             <div class="email_box">
                 <div class="email_img">
-                    <img src="asset1/images/email_img.png" alt="loading" loading="lazy" width="28" height="28">
+                    <img src="asset1/images/email_img.png" alt="" loading="lazy" width="28" height="28">
                 </div>
 
                 <div class="email_text">
@@ -359,7 +359,7 @@
 
             <div class="fb_footer_first">
 
-                <img src="asset1/images/logo.svg" alt="Local image" loading="lazy" width="106" height="34">
+                <img src="asset1/images/logo.svg" alt="images" loading="lazy" width="106" height="34">
 
                 <span class="fb_font fb_unlock">Unlock your potential and connect with your dream clubs today! Join and
                     showcase
@@ -368,9 +368,9 @@
                     realizing your dreams. Start creating your profile now!"</span>
 
                 <div>
-                    <a href="#"><img src="asset1/images/instagram.png" alt="Local image" loading="lazy" class="fb_insta"
+                    <a href="#"><img src="asset1/images/instagram.png" alt="images" loading="lazy" class="fb_insta"
                             width="28" height="28"></a>
-                    <a href="#"> <img src="asset1/images/linkedin.png" alt="Local image" loading="lazy" width="28"
+                    <a href="#"> <img src="asset1/images/linkedin.png" alt="images" loading="lazy" width="28"
                             height="28"></a>
 
                 </div>
@@ -456,7 +456,7 @@
 
                 <div class="fb_mail_flex">
                     <div>
-                        <img src="asset1/images/mail.svg" alt="Local image" loading="lazy" width="26" height="26">
+                        <img src="asset1/images/mail.svg" alt="images" loading="lazy" width="26" height="26">
                     </div>
                     <div class="fb_font fb_mail">care@bookmyplayer.com</div>
                 </div>
