--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </div> -->
 
             <div>
-                <button class="fb_login_btn fb_font">Login</button>
+                <button class="fb_login_btn fb_font">Register</button>
             </div>
 
 
@@ -85,7 +85,7 @@
         <div>
             <span class="fb_blue_home">Home</span>
             <img src="asset1/images/white-arrow.svg" alt="images" loading="lazy" width="14" height="8">
-            <span class="fb_blue_home">Login To Manager</span>
+            <span class="fb_blue_home">Owner</span>
         </div>
 
 
@@ -97,7 +97,7 @@
                 <li class="fb_nav">Blogs</li>
                 <li class="fb_nav">Competition</li>
                 <li class="fb_nav">Contact</li>
-                <li class="fb_nav">Register</li>
+                <li class="fb_nav">Login</li>
             </ul>
 
             <!-- sports pop up  -->
