--- a/index.html
+++ b/index.html
@@ -284,15 +284,15 @@
     <section class="own_buiseness_2">
         <div class="buiseness_left">
             <div class="academy_pic">
-                <img src="asset1/images/academy_pic.png" alt="">
+                <img src="asset1/images/new_banner.jpeg" alt="" class="academy_banner">
 
                 <div class="club_logo">
-                    <img src="asset1/images/club_logo.png" alt="">
+                    <img src="asset1/images/club_logo.png" alt="academy_logo">
                 </div>
             </div>
 
             <div class="buiseness_heading">
-                <p class="fb_font">Kuljeet Football Academy</p>
+                <p class="fb_font">Fast Fc Football Club</p>
             </div>
 
             <div class="star_academy">
@@ -314,7 +314,16 @@
 
             <div class="email_box">
                 <div class="email_img">
-                    <img src="asset1/images/email_img.png" alt="" loading="lazy" width="28" height="28">
+                    <img src="https://www.bookmyplayer.com/asset/images/phone_coach.svg" alt="" loading="lazy" width="28" height="28">
+                </div>
+
+                <div class="email_text">
+                    <p class="fb_font">+918745876258</p>
+                </div>
+            </div>
+            <div class="email_box">
+                <div class="email_img">
+                    <img src="https://www.bookmyplayer.com/asset/images/email_coach.svg" alt="" loading="lazy" width="28" height="28">
                 </div>
 
                 <div class="email_text">
@@ -340,6 +349,12 @@
             <div class="support_help_2">
                 <p class="fb_font">I own or manage other business</p>
             </div>
+
+            <div class="buiseness_top">
+                <p class="fb_font verify_otp">Having Problems? <span>Contact Support</span>
+                </p>
+            </div>
+    
         </div>
 
 
